<resources>
    <string name="app_name">cmdf</string>
    <string name="button_2">Button 2</string>
    <string name="password">password</string>
    <string name="user">username</string>
    <string name="button_1">Button 1</string>
    <string name="submit">Submit</string>
    <string name="log_in">log in</string>
    <string name="create_an_account"> create new account</string>
    <string name="add_task">ADD TASK</string>
    <string name="point">Point</string>
    <string name="duedate">Due Date</string>
    <string name="status">Status</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="create_new_account">create new account</string>
    <string name="e_mail">E-mail</string>
    <string name="password_2">Password</string>
    <string name="create_account">Create Account</string>
    <string name="account_already_login">Already have an account? Login</string>
    <string name="test_string">test</string>


    <string-array name="nums">
        <item>one</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
        <item>five</item>
    </string-array>
    <string name="member">Member</string>
    <string name="des">Description</string>

</resources>
